# camoflage

./: .dockerignore  Cargo.toml  Dockerfile  Justfile  deny.toml  flake.nix  service.nix
.github/workflows/: ci.yml  docker.yml  helm.yml
helm/camoflage/: Chart.yaml  values.yaml
helm/camoflage/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  secret.yaml  service.yaml
src/: cli.rs  convert.rs  diskcache.rs  errors.rs  handlers.rs  main.rs  media.rs  proxy.rs  safe_url.rs  secretkey.rs  telemetry.rs
