[package]
name = "camoflage"
description = "CAMO-compatible Image Proxy Server"
version = "0.1.1"
edition = "2021"
authors = ["CULTPONY <mail@cult.horse>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["http2"] }
axum-extra = { version = "0.9", features = ["typed-routing", "query", "typed-header"] }
base64 = "0.21"
bytes = "*"
clap = { version = "4.5", features = ["derive", "env"] }
duration-str = { version = "0.7", default-features = false, features = ["time", "serde"] }
hex = "0.4.3"
hmac = "0.12.1"
image = { version = "0.24", default-features = false, features = [ "gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld", "jpeg_rayon" ] }
ipnetwork = "0.20.0"
lazy_static = "1.4.0"
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
sha1 = "0.10.6"
sha3 = "0.10.8"
simplelog = "0.12.1"
thiserror = "1.0.56"
time = { version = "0.3", features = ["serde", "parsing"] }
tokio = { version = "1.36", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
tokio = { version = "*", features = ["test-util"] }

[features]
default = ["net-tests"]
# If not enabled, will disable all network-related tests
net-tests = []
