[package]
name = "camoflage"
description = "CAMO-compatible Image Proxy Server"
version = "0.1.1"
edition = "2024"
authors = ["CULTPONY <mail@cult.horse>"]
rust-version = "1.94"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["http2"] }
axum-extra = { version = "0.12", features = ["typed-routing", "query", "typed-header"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4.5", features = ["derive", "env"] }
duration-str = { version = "0.21", default-features = false, features = ["time", "serde"] }
hex = "0.4.3"
hmac = "0.13.0"
image = { version = "0.25", default-features = false, features = [ "default-formats", "rayon" ] }
ipnetwork = "0.21.1"
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["grpc-tonic", "trace"], optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"], optional = true }
reqwest = { version = "0.13", default-features = false, features = ["stream", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
sha3 = "0.10.8"
thiserror = "2.0.12"
time = { version = "0.3", features = ["serde", "parsing"] }
tokio = { version = "1.45", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1.44"
tracing-opentelemetry = { version = "0.32.1", optional = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.45", features = ["test-util"] }

[features]
default = ["net-tests"]
# If not enabled, will disable all network-related tests
net-tests = []
# Enable OpenTelemetry trace export via OTLP (gRPC).
# Set OTEL_EXPORTER_OTLP_ENDPOINT at runtime to activate export.
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]
